syntax = "proto3";
package tvShow;

message TVShow {
    string id = 1;
    string title = 2;
    string description = 3;
}

message GetTVShowRequest {
    string tv_show_id = 1;
}

message GetTVShowResponse {
    TVShow tv_show = 1;
}

message SearchTVShowsRequest {
    string query = 1;
}

message SearchTVShowsResponse {
    repeated TVShow tv_shows = 1;
}

message CreateTVShowRequest {
    string title = 1;
    string description = 2;
}

message CreateTVShowResponse {
    TVShow tv_show = 1;
}

service TVShowService {
    rpc GetTVShow(GetTVShowRequest) returns (GetTVShowResponse);
    rpc SearchTVShows(SearchTVShowsRequest) returns (SearchTVShowsResponse);
    rpc CreateTVShow(CreateTVShowRequest) returns (CreateTVShowResponse);
}